--- a/Proof/Supporting Files/Info.plist
+++ b/Proof/Supporting Files/Info.plist
@@ -25,30 +25,10 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>Proofread</string>
+				<string>menu_item_title</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>replaceTextWithAPIResult</string>
-		</dict>
-		<dict>
-			<key>NSRequiredContext</key>
-			<dict/>
-			<key>NSSendTypes</key>
-			<array>
-				<string>NSStringPboardType</string>
-			</array>
-			<key>NSKeyEquivalent</key>
-			<dict>
-				<key>default</key>
-				<string>O</string>
-			</dict>
-			<key>NSMenuItem</key>
-			<dict>
-				<key>default</key>
-				<string>Proofread in a Window</string>
-			</dict>
-			<key>NSMessage</key>
-			<string>replaceTextWithWindow</string>
 		</dict>
 	</array>
 </dict>
